Z-index fix for ff on preview tags

--- a/app/assets/stylesheets/context_tags.css.scss
+++ b/app/assets/stylesheets/context_tags.css.scss
@@ -303,7 +303,7 @@
     padding-bottom: 10px;
     overflow-y: auto;
     min-height: 70px;
-    //z-index: 9999;
+    z-index: 999;  // needed for ff
   }
   .preview-tag {
     display: inline-block;
